# aomi-kalshi-trader

./: .env.local.example  .gitignore  .hermes-engineer-prompt.md  Cargo.toml  README.md  next.config.ts  package-lock.json  package.json  proxy.ts
app/: globals.css  landing.module.css  layout.tsx  page.tsx
app/agent/: page.tsx
app/dashboard/: page.tsx
app/scanner/: page.tsx
components/: AomiChat.tsx  HLMarketCard.tsx  HLPositionsPanel.tsx  HLPriceChart.tsx  Header.tsx  PriceChart.tsx  TriggerCard.tsx
components/agent/: DecisionEntry.tsx  WatchlistCard.tsx
docs/: journal-schema.md  quant-roadmap.md
hooks/: useHLTick.ts  useMarketTick.ts
lib/: aomi-session.ts  hl-universe.ts  hyperliquid.ts  kalshi-auth.ts  kalshi-trade.ts  market-data.ts  openrouter-client.ts  types.ts
lib/agent/: config-store.ts  config.ts  executor.ts  memory.ts  perception.ts  research.ts  risk-gates.ts  system-prompt.ts  ta-filter.ts  triggers.ts
lib/quant/: backtest-reconciler.ts  journal.ts
lib/scanner/: auto-trader.ts  config.ts  engine.ts  risk-gates.ts  store.ts  triggers.ts
scripts/: agent-heartbeat.mjs  analyze-journal.mjs  aomi-mcp-server.mjs  backtest.mjs  backtest_v4.mjs  hermes-mcp-server.mjs  scanner-daemon.mjs  seed-journal.ts
scripts/__tests__/: e2e-market-data.test.mjs  triggers-unit.test.mjs
skills/_init/: README.md
skills/hermes-trader-agent/: SKILL.md
src/: config.rs  main.rs  state.rs
src/aomi/: mod.rs  session.rs  tools.rs
src/hyperliquid/: market.rs  mod.rs  signing.rs
templates/: agent.html  base.html  dashboard.html  landing.html
(+53 files in other folders)
